--- a/amber_lee/blog.html
+++ b/amber_lee/blog.html
@@ -1,1 +1,1 @@
-<html><head><title>BEWD RadioLab Blog</title></head><body></body></html
+ <h1>title Number 0</h1><h1>title Number 1</h1><h1>title Number 2</h1><h1>title Number 3</h1><h1>title Number 4</h1><h1>title Number 5</h1><h1>title Number 6</h1><h1>title Number 7</h1><h1>title Number 8</h1><h1>title Number 9</h1>
